# 3rd_Semester_Projects

./: final code.cpp  proj-sims.pdsprj
DLD/: Simulation.pdsprj
DSA/: presentation.pptx
DSA/QT software files/new/: mainwindow.cpp
QT software files/new/: CMakeLists.txt  mainwindow.h  mainwindow.ui
